# hibp-rs

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  Makefile  README.md  README.org
.github/workflows/: ci.yml
hibp-bin-fetch/: Cargo.toml  README.md
hibp-bin-fetch/src/: conversion.rs  digest.rs  error.rs  lib.rs  main.rs  worker.rs
hibp-bin-fetch/src/serve/: api.rs  download.rs  error.rs  mod.rs  state.rs
hibp-downloader/: Cargo.toml  README.md  README.org
hibp-downloader/src/: conversion.rs  error.rs  lib.rs  main.rs  worker.rs
hibp-profiler/: Cargo.toml  README.md
hibp-profiler/src/: main.rs
hibp-sync-client/: Cargo.toml  README.md
hibp-sync-client/src/: client.rs  error.rs  lib.rs  main.rs  sync.rs  wire.rs
hibp-sync-client/tests/: integration.rs
hibp-verifier/: Cargo.toml  README.md  README.org
hibp-verifier/benches/: async_breach_check.rs  breach_check.rs  common.rs
hibp-verifier/src/: lib.rs
