[package]
name = "hibp-downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "fs", "macros", "sync"] }
reqwest = { version = "0.12", features = ["rustls-tls"] }
indicatif = "0.17"
