[package]
name = "hibp-sync-client"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Syncs a local HIBP binary dataset from an hibp-bin-fetch serve instance"
homepage = "https://github.com/PrismaPhonic/hibp-rs"
repository = "https://github.com/PrismaPhonic/hibp-rs"

[dependencies]
compact_str.workspace = true
clap = { version = "4", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "fs", "macros", "io-util"] }
bytes = "1"
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zstd = "0.13"
chrono = { version = "0.4", features = ["serde"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-compression = { version = "0.4.41", features = ["tokio", "zstd"] }
tokio-util = { version = "0.7.18", features = ["io"] }
async-stream = "0.3.6"
futures-util = "0.3.32"

[dev-dependencies]
tempfile = "3"
hibp-bin-fetch = { workspace = true, features = ["testing"] }
ntex = { version = "3", features = ["tokio"] }
